chore: small codestyle fixes